
Builder Progress messages
----------------------
* Add a Progress signaling api to the builders: <composite>, <maven>, <maven2>, <ant>, and CCDist <distributed> (CC-686).
Experimental impl for <ant> builder to showProgress can be disabled with showProgress=false.
Progess messages are shown on the reporting/jsp project pages, below the project state text.


build.sh/release.sh scripts
----------------------
* Set JAVA_HOME properly on MacOSX (CC-681). Patch by Ingo Richter

CommandLine and Process exec handling
----------------------
* Close process.outputStream to avoid deadlocks. (CC-527) Reported by Jason R. Hull

Compound Publisher
----------------------
* Introduced a Compound Publisher (CC-656).

ConcurrentVersionsSystem/CVSBootstrapper
----------------------
* Added the ability to set the cvs compression level (CC-579). Patch by Maxim Butov.

default-plugins
----------------------
* Added darcs to the default plugins (CC-626).

Main
----------------------
* Put the ccname command line parameter back, after being inadvertently removed (CC-651). Patch by Lars Gehrken.

MavenMapper
----------------------
* MavenMapper extracts the email address for a certain committing user as configured in Mavens project.xml or pom.xml (M1 or M2) (CC-618). Contributed by Gisbert Amm.

Plugins
----------------------
* Introduce a "ControllerAware" interface for plugins (CC-680). Patch by committer emeritus Robert Watkins.

Project
----------------------
* Added a property named "buildforced" that will get passed to builders for conditional control (CC-653). Patch by Dave Kilroy.

PropertiesMapper
----------------------
* Refactored validation for cleanliness and removing duplication with ValidationHelper (CC-642). Patch by Gisbert Amm.

Schedule
----------------------
* Added trap for zero or less interval and updated docs to indicate that they are not legitimate values (CC-652). Suggested by Jeff Jensen.

SVN/SVNBootstrapper
----------------------